[package]
name = "point_process"
version = "0.3.1"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
description = "A crate for simulating random point processes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ManifoldFR/point-process-rust"
exclude = [
    "test.*",
    "examples/*.svg"
]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
rand = "0.5.4"
ndarray = { version = "0.11.2", features = ["serde-1"] }

[lib]
name = "pointprocesses"
path = "src/lib.rs"

[dev-dependencies]
plotlib = { git = "https://github.com/milliams/plotlib" }
svg = "0.5.11"
