[package]
name = "point_process"
version = "0.4.2"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
description = "A crate for simulating random point processes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ManifoldFR/point-process-rust"
exclude = [
    "test.*",
    "examples/*.svg"
]
keywords = ["mathematics", "simulation", "statistics"]
categories = ["algorithms", "simulation", "science"]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
rand = "0.5.4"
ndarray = { version = "0.11.2", features = ["serde-1"] }
rayon = "1.0.2"

[lib]
name = "pointprocesses"
path = "src/lib.rs"

[dev-dependencies]
plotlib = { path = "../plotlib/", version = "0.3.0" }
svg = "0.5.11"
