[package]
name = "point_process"
version = "0.11.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
description = "A crate for simulating random point processes."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ManifoldFR/point-process-rust"
exclude = [
    "test.*",
    "examples/*.svg"
]
keywords = ["mathematics", "simulation", "statistics"]
categories = ["algorithms", "simulation", "science"]
edition = "2018"

[dependencies]
ndarray = { version = "0.12.1", features = ["serde-1"] }
ndarray-parallel = "0.9.0"
rand = "0.6.1"
rayon = "1.0.3"
serde = "1.0.81"
serde_json = "1.0.33"

[lib]
name = "pointprocesses"
path = "src/lib.rs"

[dev-dependencies]
plotlib = { path = "../plotlib/", version = "0.3.0" }
svg = "0.5.11"
