[package]
name = "point_process"
version = "0.12.1-alpha.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
description = "A crate for simulating random point processes."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ManifoldFR/point-process-rust"
exclude = [
    "test.*",
    "examples/*.svg"
]
keywords = ["mathematics", "simulation", "statistics"]
categories = ["algorithms", "simulation", "science"]
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
ndarray = { version = "0.12.1", features = ["serde-1"] }
ndarray-parallel = "0.9.0"
rand = { version = "0.7.0", features = ["small_rng"] }
rand_distr = "0.2.2"
rayon = "1.2.0"
serde = "1.0.100"
serde_json = "1.0.40"

[lib]
name = "pointprocesses"
path = "src/lib.rs"

[dev-dependencies]
svg = "0.6.0"
plotters = "0.2.5"

