[package]
name = "pointprocessespy"
version = "0.4.1"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]

[dependencies]
point_process = { path = "../lib/" }
numpy = { git = "https://github.com/rust-numpy/rust-numpy" }
ndarray = "0.12.1"

[dependencies.pyo3]
version = "0.5.2"
features = ["extension-module"]

[lib]
name = "pointprocessespy"
path = "src/lib.rs"
crate-type = ["cdylib"]
