[package]
name = "pointprocessespy"
version = "0.5.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
edition = "2018"

[dependencies]
point_process = { path = "../lib/" }
numpy = "0.4.0"
ndarray = "0.12.1"

[dependencies.pyo3]
version = "0.5.2"
features = ["extension-module"]

[lib]
name = "pointprocessespy"
path = "src/lib.rs"
crate-type = ["cdylib"]
